--- a/src/WebApplication/WebApplication.csproj
+++ b/src/WebApplication/WebApplication.csproj
@@ -6,4 +6,12 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="ProjectDefaults" Version="1.0.82" PrivateAssets="all" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Efficiency\Efficiency.csproj" />
+    </ItemGroup>
 </Project>
