--- a/src/WebApplication/WebApplication.csproj
+++ b/src/WebApplication/WebApplication.csproj
@@ -7,11 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="EfLocalDb" Version="14.0.0" />
         <PackageReference Include="ProjectDefaults" Version="1.0.82" PrivateAssets="all" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Efficiency\Efficiency.csproj" />
+        <ProjectReference Include="..\Efficiency\Efficiency.csproj" />
     </ItemGroup>
 </Project>
