--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
     <PackageReference Include="MarkdownSnippets.MsBuild" Version="24.5.0" PrivateAssets="all" />
-    <ProjectReference Include="..\Efficiency\Efficiency.csproj" />
+    <ProjectReference Include="..\Delta\Delta.csproj" />
     <PackageReference Include="ProjectDefaults" Version="1.0.82" PrivateAssets="all" />
     <ProjectReference Include="..\WebApplication\WebApplication.csproj" />
   </ItemGroup>
