--- a/src/WebApplication/WebApplication.csproj
+++ b/src/WebApplication/WebApplication.csproj
@@ -10,6 +10,6 @@
         <PackageReference Include="EfLocalDb" Version="14.0.0" />
         <PackageReference Include="ProjectDefaults" Version="1.0.82" PrivateAssets="all" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
-        <ProjectReference Include="..\Efficiency\Efficiency.csproj" />
+        <ProjectReference Include="..\Delta\Delta.csproj" />
     </ItemGroup>
 </Project>
