--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,8 +2,7 @@
 <Project>
   <PropertyGroup>
     <NoWarn>CS1591</NoWarn>
-    <Version>2.4.1</Version>
+    <Version>0.1.0-beta.1</Version>
     <AssemblyVersion>1.0.0</AssemblyVersion>
-    <PackageTags>NaughtyStrings, Bogus</PackageTags>
   </PropertyGroup>
 </Project>
