--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Verify.SqlServer" Version="4.1.0" />
     <PackageReference Include="Verify.DiffPlex" Version="2.0.0" />
     <PackageReference Include="Verify.EntityFramework" Version="8.0.0" />
+    <PackageReference Include="Verify.MicrosoftLogging" Version="3.1.1" />
+    <PackageReference Include="Verify.AspNetCore" Version="3.0.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
     <PackageReference Include="MarkdownSnippets.MsBuild" Version="24.5.0" PrivateAssets="all" />
