--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -6,7 +6,7 @@
     <PackageReference Include="EfLocalDb" Version="14.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
     <PackageReference Include="NUnit" Version="3.13.3" />
-    <PackageReference Include="Verify.NUnit" Version="19.5.0" />
+    <PackageReference Include="Verify.NUnit" Version="19.5.1-beta.1" />
     <PackageReference Include="Verify.SqlServer" Version="5.0.1" />
     <PackageReference Include="Verify.DiffPlex" Version="2.0.1" />
     <PackageReference Include="Verify.EntityFramework" Version="9.3.1" />
