--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -4,17 +4,17 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="EfLocalDb" Version="14.2.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
     <PackageReference Include="NUnit" Version="3.13.3" />
-    <PackageReference Include="Verify.NUnit" Version="19.5.1-beta.1" />
+    <PackageReference Include="Verify.NUnit" Version="19.6.0" />
     <PackageReference Include="Verify.SqlServer" Version="5.0.1" />
-    <PackageReference Include="Verify.DiffPlex" Version="2.0.1" />
+    <PackageReference Include="Verify.DiffPlex" Version="2.1.0" />
     <PackageReference Include="Verify.EntityFramework" Version="9.3.1" />
     <PackageReference Include="Verify.MicrosoftLogging" Version="3.2.0" />
     <PackageReference Include="Verify.AspNetCore" Version="3.3.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
-    <PackageReference Include="MarkdownSnippets.MsBuild" Version="24.5.0" PrivateAssets="all" />
+    <PackageReference Include="MarkdownSnippets.MsBuild" Version="24.5.1" PrivateAssets="all" />
     <ProjectReference Include="..\Delta\Delta.csproj" />
     <PackageReference Include="ProjectDefaults" Version="1.0.84" PrivateAssets="all" />
     <ProjectReference Include="..\WebApplication\WebApplication.csproj" />
