--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -5,5 +5,6 @@
     <Version>2.0.0</Version>
     <LangVersion>preview</LangVersion>
     <AssemblyVersion>1.0.0</AssemblyVersion>
+    <ResolveAssemblyReferencesSilent>true</ResolveAssemblyReferencesSilent>
   </PropertyGroup>
 </Project>
