--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -6,7 +6,7 @@
     <PackageReference Include="EfLocalDb" Version="16.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="NUnit" Version="4.0.0" />
-    <PackageReference Include="Verify.Nunit" Version="22.5.0" />
+    <PackageReference Include="Verify.Nunit" Version="22.6.0" />
     <PackageReference Include="Verify.SqlServer" Version="8.0.1" />
     <PackageReference Include="Verify.DiffPlex" Version="2.3.0" />
     <PackageReference Include="Verify.EntityFramework" Version="12.0.0" />
@@ -18,5 +18,7 @@
     <ProjectReference Include="..\Delta\Delta.csproj" />
     <PackageReference Include="ProjectDefaults" Version="1.0.102" PrivateAssets="all" />
     <ProjectReference Include="..\WebApplication\WebApplication.csproj" />
+    <Using Include="NUnit.Framework.Legacy.ClassicAssert" Static="True" />
+    <Using Include="NUnit.Framework.Assert" Static="True" />
   </ItemGroup>
 </Project>
