--- a/src/WebApplication/WebApplication.csproj
+++ b/src/WebApplication/WebApplication.csproj
@@ -1,15 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <PackageReference Include="EfLocalDb" Version="16.1.0" />
-        <PackageReference Include="ProjectDefaults" Version="1.0.118" PrivateAssets="all" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
-        <ProjectReference Include="..\Delta\Delta.csproj" />
-    </ItemGroup>
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <IsPackable>true</IsPackable>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="EfLocalDb" Version="16.1.0" />
+    <PackageReference Include="ProjectDefaults" Version="1.0.118" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
+    <ProjectReference Include="..\Delta\Delta.csproj" />
+  </ItemGroup>
 </Project>
