--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -3,20 +3,20 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="EfLocalDb" Version="18.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
-    <PackageReference Include="NUnit" Version="4.1.0" />
-    <PackageReference Include="Verify.NUnit" Version="24.2.0" />
-    <PackageReference Include="Verify.SqlServer" Version="8.0.4" />
-    <PackageReference Include="Verify.DiffPlex" Version="3.0.0" />
-    <PackageReference Include="Verify.EntityFramework" Version="12.1.1" />
-    <PackageReference Include="Verify.MicrosoftLogging" Version="4.0.1" />
-    <PackageReference Include="Verify.AspNetCore" Version="4.0.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
-    <PackageReference Include="MarkdownSnippets.MsBuild" Version="27.0.2" PrivateAssets="all" />
+    <PackageReference Include="EfLocalDb" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="NUnit" />
+    <PackageReference Include="Verify.NUnit" />
+    <PackageReference Include="Verify.SqlServer" />
+    <PackageReference Include="Verify.DiffPlex" />
+    <PackageReference Include="Verify.EntityFramework" />
+    <PackageReference Include="Verify.MicrosoftLogging" />
+    <PackageReference Include="Verify.AspNetCore" />
+    <PackageReference Include="NUnit3TestAdapter" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="MarkdownSnippets.MsBuild" PrivateAssets="all" />
     <ProjectReference Include="..\Delta\Delta.csproj" />
-    <PackageReference Include="ProjectDefaults" Version="1.0.127" PrivateAssets="all" />
+    <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <ProjectReference Include="..\WebApplication\WebApplication.csproj" />
     <Using Include="NUnit.Framework.Legacy.ClassicAssert" Static="True" />
     <Using Include="NUnit.Framework.Assert" Static="True" />
