--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -11,5 +11,6 @@
     <NuGetAuditLevel>low</NuGetAuditLevel>
     -->
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
   </PropertyGroup>
 </Project>
