--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -4,21 +4,21 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="EfLocalDb" Version="19.1.1" />
+    <PackageVersion Include="EfLocalDb" Version="19.2.1" />
     <PackageVersion Include="MarkdownSnippets.MsBuild" Version="27.0.2" />
     <PackageVersion Include="Microsoft.Data.SqlClient" Version="5.2.2" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageVersion Include="NUnit" Version="4.2.2" />
     <PackageVersion Include="NUnit3TestAdapter" Version="4.6.0" />
     <PackageVersion Include="ProjectDefaults" Version="1.0.141" />
     <PackageVersion Include="Verify.AspNetCore" Version="4.0.0" />
-    <PackageVersion Include="Verify.DiffPlex" Version="3.1.0" />
-    <PackageVersion Include="Verify.EntityFramework" Version="12.3.0" />
+    <PackageVersion Include="Verify.DiffPlex" Version="3.1.2" />
+    <PackageVersion Include="Verify.EntityFramework" Version="12.4.0" />
     <PackageVersion Include="Verify.MicrosoftLogging" Version="4.0.1" />
-    <PackageVersion Include="Verify.NUnit" Version="28.0.0-beta.6" />
-    <PackageVersion Include="Verify.SqlServer" Version="10.0.0" />
+    <PackageVersion Include="Verify.NUnit" Version="28.1.2" />
+    <PackageVersion Include="Verify.SqlServer" Version="10.1.0" />
   </ItemGroup>
 </Project>
