--- a/src/Delta.EF/Delta.EF.csproj
+++ b/src/Delta.EF/Delta.EF.csproj
@@ -9,13 +9,8 @@
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Data.SqlClient" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\Delta\DeltaExtensions.cs">
-      <Link>DeltaExtensions.cs</Link>
-    </Compile>
-    <Compile Include="..\Delta\DeltaExtensions_MiddleWare.cs">
-      <Link>DeltaExtensions_MiddleWare.cs</Link>
+    <Compile Include="..\Delta\DeltaExtensions_Shared.cs">
+      <Link>DeltaExtensions_Shared.cs</Link>
     </Compile>
   </ItemGroup>
 </Project>
