--- a/src/WebApplicationEF/WebApplicationEF.csproj
+++ b/src/WebApplicationEF/WebApplicationEF.csproj
@@ -1,5 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
+    <TargetFrameworks>net9.0;</TargetFrameworks>
     <TargetFramework>net9.0</TargetFramework>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
