--- a/src/Delta.EF/Delta.EF.csproj
+++ b/src/Delta.EF/Delta.EF.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Data.SqlClient" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
     <Compile Include="..\Delta\DeltaExtensions_Sql.cs">
       <Link>DeltaExtensions_Sql.cs</Link>
     </Compile>
