--- a/src/WebApplicationSqlServerEF/WebApplicationSqlServerEF.csproj
+++ b/src/WebApplicationSqlServerEF/WebApplicationSqlServerEF.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <IsPackable>false</IsPackable>
+    <RootNamespace>WebApplicationEF</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="EfLocalDb" />
