--- a/src/WebApplicationPostgresEF/WebApplicationPostgresEF.csproj
+++ b/src/WebApplicationPostgresEF/WebApplicationPostgresEF.csproj
@@ -4,9 +4,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="EfLocalDb" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
     <ProjectReference Include="..\Delta.EF\Delta.EF.csproj" />
   </ItemGroup>
 </Project>
