--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -7,9 +7,11 @@ services:
   - postgresql13
 build_script:
 - cmd: >-
+    SET PGUSER=postgres
     set pgpassword=Password12!
-    "C:\Program Files\PostgreSQL\13\bin\psql.exe" -h localhost -U postgres -c "ALTER SYSTEM SET track_commit_timestamp to 'on'"
-    "C:\Program Files\PostgreSQL\13\bin\psql.exe" -h localhost -U postgres -c "CREATE DATABASE delta"
+    PATH=C:\Program Files\PostgreSQL\13\bin\;%PATH%
+    psql.exe -h localhost -U postgres -c "ALTER SYSTEM SET track_commit_timestamp to 'on'"
+    createdb delta
 - pwsh: |
     Invoke-WebRequest "https://dot.net/v1/dotnet-install.ps1" -OutFile "./dotnet-install.ps1"
     ./dotnet-install.ps1 -JSonFile src/global.json -Architecture x64 -InstallDir 'C:\Program Files\dotnet'
