--- a/src/WebApplicationPostgresEF/WebApplicationPostgresEF.csproj
+++ b/src/WebApplicationPostgresEF/WebApplicationPostgresEF.csproj
@@ -5,11 +5,10 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Npgsql" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
     <ProjectReference Include="..\Delta.EF\Delta.EF.csproj" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="..\DeltaTests\PostgresConnection.cs">
       <Link>PostgresConnection.cs</Link>
     </Compile>
