--- a/src/Delta.SqlServer/Delta.SqlServer.csproj
+++ b/src/Delta.SqlServer/Delta.SqlServer.csproj
@@ -3,10 +3,9 @@
     <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <IsPackable>true</IsPackable>
-
-    <DefineConstants>$(DefineConstants);Delta</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Data.SqlClient" />
   </ItemGroup>
 </Project>
