--- a/src/WebApplicationPostgres/WebApplicationPostgres.csproj
+++ b/src/WebApplicationPostgres/WebApplicationPostgres.csproj
@@ -2,10 +2,14 @@
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <IsPackable>false</IsPackable>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LocalDb" />
+    <PackageReference Include="Npgsql" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <ProjectReference Include="..\Delta\Delta.csproj" />
+    <Compile Include="..\DeltaTests\PostgresConnection.cs">
+      <Link>PostgresConnection.cs</Link>
+    </Compile>
   </ItemGroup>
 </Project>
