--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -3,7 +3,23 @@ environment:
   DOTNET_NOLOGO: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+services:
+  - postgresql13
 build_script:
+- cmd: >-
+    SET PGUSER=postgres
+
+    set pgpassword=Password12!
+
+    PATH=C:\Program Files\PostgreSQL\13\bin\;%PATH%
+
+    psql.exe -h localhost -U postgres -c "ALTER SYSTEM SET track_commit_timestamp to 'on'"
+
+    createdb delta
+
+    net stop postgresql-x64-13
+
+    net start postgresql-x64-13
 - pwsh: |
     Invoke-WebRequest "https://dot.net/v1/dotnet-install.ps1" -OutFile "./dotnet-install.ps1"
     ./dotnet-install.ps1 -JSonFile src/global.json -Architecture x64 -InstallDir 'C:\Program Files\dotnet'
