refs and cleanup

--- a/src/Delta.EF/Delta.EF.csproj
+++ b/src/Delta.EF/Delta.EF.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
+    <PackageReference Include="Microsoft.Sbom.Targets" PrivateAssets="all" />
     <Compile Include="..\Delta\DeltaExtensions_Sql.cs">
       <Link>DeltaExtensions_Sql.cs</Link>
     </Compile>
