--- a/src/DeltaTests/DeltaTests.csproj
+++ b/src/DeltaTests/DeltaTests.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\Delta\Delta.csproj" />
     <PackageReference Include="Microsoft.Data.SqlClient" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
+    <ProjectReference Include="..\WebApplicationMySql\WebApplicationMySql.csproj" />
     <ProjectReference Include="..\WebApplicationPostgres\WebApplicationPostgres.csproj" />
     <ProjectReference Include="..\WebApplicationSqlServer\WebApplicationSqlServer.csproj" />
     <Using Include="NUnit.Framework.Legacy.ClassicAssert" Static="True" />
