--- a/src/Delta.EF/Delta.EF.csproj
+++ b/src/Delta.EF/Delta.EF.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+    <TargetFramework>net10.0</TargetFramework>
     <OutputType>Library</OutputType>
     <IsPackable>true</IsPackable>
     <DefineConstants>$(DefineConstants);DeltaEF</DefineConstants>
