--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -4,7 +4,7 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="EfLocalDb" Version="21.0.0" />
+    <PackageVersion Include="EfLocalDb" Version="22.0.0" />
     <PackageVersion Include="LocalDb" Version="22.0.0" />
     <PackageVersion Include="MarkdownSnippets.MsBuild" Version="28.0.0-beta.7" />
     <PackageVersion Include="Microsoft.Data.SqlClient" Version="6.1.3" />
@@ -23,6 +23,6 @@
     <PackageVersion Include="Verify.MicrosoftLogging" Version="4.0.1" />
     <PackageVersion Include="Verify.NUnit" Version="31.7.2" />
     <PackageVersion Include="Verify.SqlServer" Version="11.2.0" />
-    <PackageVersion Include="Microsoft.Sbom.Targets" Version="4.1.3" />
+    <PackageVersion Include="Microsoft.Sbom.Targets" Version="4.1.4" />>
   </ItemGroup>
 </Project>
