--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -4,8 +4,8 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="EfLocalDb" Version="23.5.0" />
-    <PackageVersion Include="LocalDb" Version="23.5.0" />
+    <PackageVersion Include="EfLocalDb" Version="23.6.0" />
+    <PackageVersion Include="LocalDb" Version="23.6.0" />
     <PackageVersion Include="MarkdownSnippets.MsBuild" Version="28.0.0" />
     <PackageVersion Include="Microsoft.Data.SqlClient" Version="6.1.4" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="10.0.3" />
@@ -25,5 +25,10 @@
     <PackageVersion Include="Verify.NUnit" Version="31.12.5" />
     <PackageVersion Include="Verify.SqlServer" Version="11.3.1" />
     <PackageVersion Include="Microsoft.Sbom.Targets" Version="4.1.5" />
+    <PackageVersion Include="Argon" Version="0.33.5" />
+    <PackageVersion Include="DiffEngine" Version="18.4.1" />
+    <PackageVersion Include="EmptyFiles" Version="8.17.2" />
+    <PackageVersion Include="SimpleInfoName" Version="3.2.0" />
+    <PackageVersion Include="Verify" Version="31.12.5" />
   </ItemGroup>
 </Project>
